fixed nav bar links to show on smaller screens

--- a/css/contact.css
+++ b/css/contact.css
@@ -67,3 +67,8 @@ footer {
     font-family: 'Sen', sans-serif;
     margin-bottom: 0;
 }
+  
+/* Media Query */
+@media (max-width: 400x) {
+    .nav-minimize {display: none !important;}
+}
